infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: kliao36/blog-client:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector: # Indicate which pod to expose
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000 # Expose port 3000 on the ClusterIP Service
      targetPort: 3000 # Send traffic to port 3000 on the pod
