infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: kliao36/comments:latest
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP
  selector: # Indicate which pod to expose
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # Expose port 4001 on the ClusterIP Service
      targetPort: 4001 # Send traffic to port 4001 on the pod
