infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: kliao36/event-bus:latest
          ports:
            - containerPort: 4005

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP
  selector: # Indicate which pod to expose
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005 # Expose port 4005 on the ClusterIP Service
      targetPort: 4005 # Send traffic to port 4005 on the pod
