infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: kliao36/moderation:latest
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP
  selector: # Indicate which pod to expose
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003 # Expose port 4003 on the ClusterIP Service
      targetPort: 4003 # Send traffic to port 4003 on the pod
