infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: kliao36/posts:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: ClusterIP
  selector: # Indicate which pod to expose
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # Expose port 4000 on the ClusterIP Service
      targetPort: 4000 # Send traffic to port 4000 on the pod
