infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: kliao36/query:latest
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector: # Indicate which pod to expose
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002 # Expose port 4002 on the ClusterIP Service
      targetPort: 4002 # Send traffic to port 4002 on the pod
